# todo-rust-mongo-aca

./: .gitignore  Cargo.toml  README.md  azure.yaml
.devcontainer/: devcontainer.json
src/api/: Cargo.toml  Dockerfile  README.md  dina.txt
src/api/scripts/: curl.sh  get_lists.http_request  insert_item.json  update_list.json
src/api/scripts/data/: lists.json
src/api/src/: main.rs
src/api/src/item/: database.rs  database_model.rs  handler.rs  request_model.rs
src/api/src/list/: database.rs  database_model.rs  handler.rs  mod.rs  request_model.rs
src/api/src/shared/: database.rs  database_error.rs  mod.rs  request_model.rs  route.rs
src/azure-cosmos-no-sql/: .env  readme.md
src/azure-cosmos-no-sql-crud/: Cargo.toml
src/azure-cosmos-no-sql-crud/src/: main.rs  main.rs.old
src/azure-cosmos-no-sql/src/: main.rs
src/azure-storage-blobs/: .env  Cargo.toml
src/azure-storage-blobs/src/: main.rs
src/rust-axum-mongodb/: .gitignore
src/rust-axum-mongodb/scripts/: insert_list.json  temp.json  update_item.json
src/rust-axum-mongodb/src/: database.rs  main.rs  route.rs
src/rust-axum-mongodb/src/collections/: error.rs  mod.rs  model.rs
src/rust-axum-mongodb/src/collections/item/: database.rs  model.rs  schema.rs
src/rust-axum-mongodb/src/collections/list/: database.rs  mod.rs  model.rs  schema.rs
src/rust-axum-mongodb/src/handlers/: mod.rs  response_item.rs  response_list.rs
src/rust-axum-mongodb/src/item/: database.rs  database_model.rs  handler.rs  mod.rs  request_model.rs
src/rust-axum-mongodb/src/list/: database.rs  database_model.rs  handler.rs  request_model.rs
src/rust-axum-mongodb/src/shared/: database_error.rs  mod.rs
src/web/: README.md  package.json
src/web/src/actions/: itemActions.ts
