[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
azure_core = "0.19.0"
azure_data_cosmos = "0.19.0"
dotenv = "0.15.0"
axum = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }