[package]
name = "rust-axum-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.4", features = ["macros"] }
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "2.3.0", features = ["chrono"] }
bson = { version = "2.3.0", features = ["chrono-0_4", "serde_with"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tower = "0.4.13"
hyper = "1.2.0"
tracing = "0.1.40"
rand = "0.8.5"
http = "1.1.0"
serde_repr = "0.1.18"
