[package]
name = "azure-cosmos-no-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_data_cosmos = "0.19.0"
dotenv = "0.15.0"
futures = "0.3.30"
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
