[package]
name = "azure-storage-blobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_storage_blobs = "0.19.0"
azure_core = "0.19.0"
dotenv = "0.15.0"
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
azure_storage = "0.19.0"
futures = "0.3.30"
